src/components/contacts/contacts.scss
.contacts {
  width: 100vw;
  min-height: 515px - 50px;
  padding-bottom: 50px;
  display: flex;
  background-color: #343437;

  @include mobile {
    width: 100%;
    height: auto;
  }

  .contentWrapper {
    max-width: 1040px;
    flex: 1;
    margin: 0 auto;

    @include mobile {
      padding: 0 20px;
    }
    
    @at-root body[data-browser="ie"] & {
      min-width: 1040px;
    }
  }

  .title {
    margin-top: 100px;
    font-family: $fontAlt;
    font-size: 48px;
    font-weight: 800;
    color: white;

    @include mobile {
      font-size: 30px;
    }
  }

  .form {
    margin-top: 60px;
    display: flex;
    flex-wrap: wrap;
    color: white;
  }

  .itemsWrapper {
    width: 100%;
    display: flex;

    @include mobile {
      flex-direction: column;
    }
  }

  .nameAndMail {
    width: 380px;
    margin-right: 40px;

    @include mobile {
      width: auto;
      margin: 0 0 30px 0;
    }
  }

  .name,
  .mail {
    padding: 7px 0;
    width: 381px;
    display: block;
    border-bottom: 1px solid white;

    @include mobile {
      width: 100%;
      display: block;
    }

    &::placeholder {
      color: grey;
    }

    &:focus::placeholder {
      color: lightgrey;
    }
  }

  .name {
    margin-bottom: 30px;
  }

  .subjectWrapper {
    position: relative;
    top: 2px;
    width: 100%;
    min-height: 100%;
    display: flex;
    position: relative;

    @include mobile {
      min-height: auto;
    }
    
    &::before {
      content: '';
      width: 100%;
      height: 100%;
      position: absolute;
      left: 0;
      top: 0;
      z-index: 0;
      background: repeating-linear-gradient(
                rgba(0,0,0,0),
                rgba(0,0,0,0) 32.5px,
                #49494b 32.5px,
                #49494b 33.5px
              );;
    }

    @include mobile {
      height: auto;
      background: none;
    }

    @at-root body[data-browser="ie"] & {
      width: 60%;
    }

    &::after {
      content: '';
      width: 100%;
      position: absolute;
      left: 0;
      top: 33.5px;
      border-top: 1px solid white;
    }
  }

  .subject {
    width: calc(1040px - 420px);
    max-height: 300px;
    overflow: auto;
    display: block;
    line-height: 34px;
    outline: none;
    position: relative;
    
    @include mobile {
      width: calc(100vw - 40px);
      height: 300px;
    }

    &::before {
      content: attr(data-placeholder);
      color: grey;
    }

    @include mobile {
      height: auto;
      overflow: auto;
    }

    &:not(:empty)::before {
      display: none;
    }

    &:focus::before {
      color: lightgrey;
    }
  }

  .contactsButton {
    height: 60px;
    margin: 55px 0 0 auto;
    padding: 0 50px 2px 50px;
    position: relative;
    // background-image: linear-gradient(-89deg, #00b4ff 0%, #9c00ff 100%);
    border-radius: 30px;
    font-weight: 800;
    transition: filter 0.2s;

    .content {
      position: relative;
      z-index: 1;
    }
    
    &::before {
      content: '';
      width: 100%;
      height: 100%;
      position: absolute;
      left: 0;
      top: 0;
      border-radius: 30px;
      background-image: linear-gradient(89deg, #00b4ff 0%, #9c00ff 100%);
      z-index: 0;
    }

    &::after {
      content: '';
      width: 100%;
      height: 100%;
      position: absolute;
      left: 0;
      top: 0;
      border-radius: 30px;
      background-image: linear-gradient(-89deg, #00b4ff 0%, #9c00ff 100%);
      z-index: 0;
      opacity: 0;
      transition: opacity 0.3s ease-out;
    }

    @include mobile {
      margin: 55px auto 0 auto;
    }

    &:focus {
      filter: brightness(1.15) !important;
    }

    @keyframes highlights {
      100% {
        transform: translateY(2px);
      }
    }

    &:hover::after {
      opacity: 1;
    }
  }

  .pseudoSubject {
    width: 100%;
    height: 100%;
    position: absolute;
    pointer-events: none;
    opacity: 0;
  }
}

